Name:                cef3-simple
Version:             0.1.0
Synopsis:            Simple wrapper around cef3-raw
License:             BSD3
License-File:        LICENSE
Author:              Maksymilian Owsianny
Maintainer:          Maksymilian.Owsianny@gmail.com
Bug-Reports:         https://github.com/haskell-ui/cef3-simple/issues
Category:            FFI
Build-Type:          Simple
Cabal-Version:       >=1.10

Source-Repository head
  type:     git
  location: https://github.com/haskell-ui/cef3-simple.git

Library
  default-language:   Haskell2010
  hs-source-dirs:     src

  build-depends:      base      >= 4.7
               ,      cef3-raw

  exposed-modules:    Graphics.CEF3.Simple

  if os(windows)
    build-depends:    Win32


